# DiffMITC3Impl

./: .gitmodules  CMakeLists.txt  setup.py
src/: Mitc3.hpp  math_util.hpp  pybind.cpp  pybind_util.hpp
